--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -56,3 +56,8 @@ textarea {
 .modal {
 	margin-top:50px;
 }
+
+.website {    
+    overflow: hidden;
+    text-overflow: ellipsis; 
+}
